--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
                 <div class="header-left">
                     <ul class="pull-left">
                         <li>
-                            <a href="#">
+                            <a href="mailto:info@dianoeta.co.in">
                                 <i class="fa fa-envelope" aria-hidden="true"></i>info@dianoeta.co.in
                             </a>
                         </li><!--/li-->
@@ -492,87 +492,38 @@
                 <div class="contact-details">
                     <div class="section-header contact-head  text-center">
                         <h2>contact us</h2>
-                        <p>
-                            Please fill in the form and we will get in touch with you.
-                        </p>
                     </div><!--/.section-header-->
                     <div class="contact-content">
                         <div class="row">
                             <div class="col-sm-offset-1 col-sm-5">
-                                <div class="single-contact-box">
-                                    <div class="contact-right">
-                                        <div class="contact-adress">
-                                            <div class="contact-office-address">
-                                                <h3>contact info</h3>
-                                                <p>
-																	 <i class="fa fa-map-marker"></i>&nbsp
-                                                    16/9/2 Pannalal Road,<br> Allahabad. UP - 211002
-                                                </p>
-                                                <div class="contact-online-address">
-                                                    <div class="single-online-address">
-                                                        <i class="fa fa-envelope-o"></i>
-                                                        <span>info@dianoeta.co.in</span>
-                                                    </div><!--/.single-online-address-->
-                                                </div><!--/.contact-online-address-->
-                                            </div><!--/.contact-office-address-->
-                                            <div class="contact-office-address">
-                                                <h3>social partner</h3>
-                                                <div class="contact-icon">
-                                                    <ul>
-                                                        <li><a href="#"><div style="font-size: 24px;"><i class="fa fa-skype" aria-hidden="true"></i></div></a></li><!--/li-->
-                                                    </ul><!--/ul-->
-                                                </div><!--/.contact-icon-->
-                                            </div><!--/.contact-office-address-->
 
-                                        </div><!--/.contact-address-->
-                                    </div><!--/.contact-right-->
-                                </div><!--/.single-contact-box-->
+                                <div class="contact-office-address">
+                                    <h3>contact info</h3><br>
+                                    <span style="color:white">
+                                                         <i class="fa fa-map-marker"></i>&nbsp
+                                        <b>16/9/2 Pannalal Road,<br> Allahabad. UP - 211002</b>
+                                    </span>
+                                    <div class="contact-online-address">
+                                        <div class="single-online-address">
+                                            <a href="mailto:info@dianoeta.co.in" style="color:white;">
+                                                <i class="fa fa-envelope-o"></i>
+                                                <span>info@dianoeta.co.in</span>
+                                            </a>
+                                        </div><!--/.single-online-address-->
+                                    </div><!--/.contact-online-address-->
+                                </div><!--/.contact-office-address-->
+
                             </div><!--/.col-->
                             <div class="col-sm-5">
                                 <div class="single-contact-box">
-                                    <div class="contact-form">
-                                        <h3>Leave us a Message Here</h3>
-                                        <form method="POST">
-                                            <div class="row">
-                                                <div class="col-sm-6 col-xs-12">
-                                                    <div class="form-group">
-                                                      <input type="text" class="form-control" id="firstname" placeholder="First Name" name="firstname">
-                                                    </div><!--/.form-group-->
-                                                </div><!--/.col-->
-                                                <div class="col-sm-6 col-xs-12">
-                                                    <div class="form-group">
-                                                      <input type="text" class="form-control" id="lastname" placeholder="Last Name" name="laststname">
-                                                    </div><!--/.form-group-->
-                                                </div><!--/.col-->
-                                            </div><!--/.row-->
-                                            <div class="row">
-                                                <div class="col-sm-6 col-xs-12">
-                                                    <div class="form-group">
-                                                        <input type="email" class="form-control" id="email" placeholder="Email" name="email">
-                                                    </div><!--/.form-group-->
-                                                </div><!--/.col-->
-                                                <div class="col-sm-6 col-xs-12">
-                                                    <div class="form-group">
-                                                        <input type="text" class="form-control" id="phone" placeholder="Phone" name="phone">
-                                                    </div><!--/.form-group-->
-                                                </div><!--/.col-->
-                                            </div><!--/.row-->
-                                            <div class="row">
-                                                <div class="col-sm-12">
-                                                    <div class="form-group">
-                                                        <textarea class="form-control" rows="7" id="comment" placeholder="Message" ></textarea>
-                                                    </div><!--/.form-group-->
-                                                </div><!--/.col-->
-                                            </div><!--/.row-->
-                                            <div class="row">
-                                                <div class="col-sm-12">
-                                                    <div class="single-contact-btn pull-right">
-                                                        <button class="contact-btn" type="button" onclick="document.getElementById('contactform').submit();">send message</button>
-                                                    </div><!--/.single-single-contact-btn-->
-                                                </div><!--/.col-->
-                                            </div><!--/.row-->
-                                        </form><!--/form-->
-                                    </div><!--/.contact-form-->
+                                    <div class="contact-office-address">
+                                        <h3>social partner</h3>
+                                        <div class="contact-icon">
+                                            <ul>
+                                                <li><a href="#"><div style="font-size: 24px;"><i class="fa fa-skype" aria-hidden="true"></i></div></a></li><!--/li-->
+                                            </ul><!--/ul-->
+                                        </div><!--/.contact-icon-->
+                                    </div><!--/.contact-office-address-->
                                 </div><!--/.single-contact-box-->
                             </div><!--/.col-->
                         </div><!--/.row-->
